changement meta key

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="keywords"
-      content="seo, google, site web, site internet, agence design Lyon,"
+      content="seo, google, site web, agence design Lyon,"
     />
     <meta name="description" content="La Phantère agence créateur de site internet dans la région de Lyon" />
     <meta name="robots" content="index, follow" />
@@ -35,7 +35,7 @@
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/agence-la-panthere-monochrome.svg"
-                  alt="Lyon web design le logo de l'agence une tête de Panthèresur un fond blanc"
+                  alt="Le logo de l'agence la phanthere"
               /></a>
               <button
                 id="nav-toggle"
@@ -77,7 +77,7 @@
                 src="img/logo.png"
                 class="center-block image-resize-mode"
                 width="100"
-                alt="Lyon web design le logo de l'agence une tête de Panthèresur un fond blanc"
+                alt="Le logo de l'agence Panthère"
               />
               <h1 class="text-center hero-bloc-text tc-white">
                 Agence La Panthère
