--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 ><img
                   src="img/2.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt=" Une fille dans la rue avec l'arriere flouter ,devant sont appareil photo poser sur des pied, prend une photo"
+                  alt=" Une fille devant sont appareil photo poser sur des pied, prend une photo"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -262,7 +262,7 @@
                 ><img
                   src="img/3.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="Plusieur appareils photo, ordinateurs et accessoires sont poser sur un fond d'ecran noir "
+                  alt="Plusieur appareils photo, ordinateurs et accessoires sur un fond d'ecran noir "
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -282,7 +282,7 @@
                 ><img
                   src="img/4.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="Une personne ou on voit ces main travaille sur sont ordinateur, avec plusieur papiers poser sur une table"
+                  alt="Une personne ou ces mains travailles sur un ordinateur, avec plusieurs papiers poser sur une table"
               /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
