--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <h2>
+              <h2><em>
                 L'agence La Panthère est une agence de web design qui aide
                 <br />
-                les entreprises à devenir attractives et visibles sur internet.
+                les entreprises à devenir attractives et visibles sur internet.</em>
               </h2>
             </div>
           </div>
@@ -151,7 +151,7 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <em
+              <em class="maxime-texte"
                 >"L'agence La Panthère est une excellente agence web ! Les<br />
                 webdesigners ont réussi à capturer l'essence de notre<br />
                 entreprise et à l'intégrer à notre site. Celà nous a aidé à<br />
