--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
               <img
-                src="img/logo.png"
+                src="img/logo.webp"
                 class="center-block image-resize-mode"
                 width="100"
                 alt="Le logo de l'agence Panthère"
@@ -213,12 +213,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/1.jpg"
+                data-lightbox="img/1.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Refonte d'un site web pour un journal local"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/1.jpg"
+                  src="img/1.webp"
                   alt="Plusieurs magazines sont empiler les uns dans les autres"
                   class="img-responsive portfolio-thumb"
               /></a>
@@ -233,12 +233,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/2.jpg"
+                data-lightbox="img/2.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site web pour des photographes"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/2.jpg"
+                  src="img/2.webp"
                   class="img-responsive portfolio-thumb"
                   alt=" Une fille devant sont appareil photo poser sur des pied, prend une photo"
               /></a>
@@ -255,12 +255,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/3.jpg"
+                data-lightbox="img/3.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/3.jpg"
+                  src="img/3.webp"
                   class="img-responsive portfolio-thumb"
                   alt="Plusieur appareils photo, ordinateurs et accessoires sur un fond d'ecran noir "
               /></a>
@@ -275,12 +275,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/4.jpg"
+                data-lightbox="img/4.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/4.jpg"
+                  src="img/4.webp"
                   class="img-responsive portfolio-thumb"
                   alt="Une personne ou ces mains travailles sur un ordinateur, avec plusieurs papiers poser sur une table"
               /></a>
