--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
+    <link rel="shortcut icon" type="image/png" href="favicon.webp" />
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -48,7 +48,6 @@
                 ><span class="icon-bar"></span><span class="icon-bar"></span
                 ><span class="icon-bar"></span>
               </button>
-            </div>
             <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
               <ul class="site-navigation nav navbar-nav">
                 <li>
@@ -74,7 +73,7 @@
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
               <img
-                src="img/logo.webp"
+                src="img/logo.png"
                 class="center-block image-resize-mode"
                 width="100"
                 alt="Le logo de l'agence Panthère"
