--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
               <img
-                src="img/logo.png"
+                src="img/logo.webp"
                 class="center-block image-resize-mode"
                 width="100"
                 alt="Le logo de l'agence Panthère"
